--- a/index.html
+++ b/index.html
@@ -21,12 +21,8 @@
       <!-- table for links at the top -->
       <table class="table">
           <tr>
-            <td class="large_td">WILLARD MATH CIRCLE</td>
+            <td class="large_td">BERKELEY HIGH POLITICAL ACTIVISM</td>
             <td class="nav_link"><a href="index.html">Home</a></td>
-            <td class="nav_link"><a href="information.html">Information</a></td>
-            <td class="nav_link"><a href="resources.html">Resources</a></td>
-            <td class="nav_link"><a href="tutoring.html">Tutoring</a></td>
-            <td class="nav_link"><a href="contact.html">Contact Us</a></td>
           </tr>
       </table>
 
@@ -42,23 +38,18 @@
       </style>
 
       <!-- title -->
-      <h1 class="hometitle">Willard Math Circle</h1>
+      <h1 class="hometitle">Berkeley High Political Activism</h1>
       <!-- image of math -->
       <div class="blackboard-picture">
-        <img src="https://images.theconversation.com/files/139426/original/image-20160927-14593-1rf92dt.jpg?ixlib=rb-1.1.0&rect=0%2C0%2C5000%2C2425&q=45&auto=format&w=1356&h=668&fit=crop" alt="Trulli" width="100%">
+        <img src="https://www.freepik.com/premium-vector/political-protest-with-silhouette-protesters-hands-holding-megaphone-banners-flags_5098682.htm" alt="Trulli" width="100%">
       </div>
 
       <!--all about us -->
       <h3 class="subtitle">All About Us</h3>
-      <p class="all_about_us_info">Willard Math Circle is a program aimed for advanced middle school students with a passion
-        for the art of mathematics and for kids who are looking to find a STEM oriented community to share their interests with!</p>
-      <p class="all_about_us_info">Instead of focusing on memorization and school-oriented math, we encourage students to
-        explore a wide berth of problems and fields and collaborate with their peers on interesting high level math.</p>
-      <p class="all_about_us_info">Although the content is rigorous and often challenging, the goal is not mastery, but rather an immersive experience intended on
-        developing logical reasoning skills and just having fun with math! Students aren't expected to understand everything, but rather
-        explore areas of math they have never seen before with the support of their peers!</p>
-
-      <img class="colorfulmath" src="colorfulmath.png" width="48%">
+      <p class="all_about_us_info">Berkeley High Political Activism is a student led club founded to encourage political dialogue and 
+          voter engagement within our community through discussion and debate ranging from presidential candidates to climate change policy.</p>
+      <p class="all_about_us_info">All students are welcome, no matter your political views or background. Feel free to join us in discussions, take part in projects
+        and missions, or just stop by and say hello!</p>
 
     </body>
 </html>
