--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <!-- webpage header -->
-      <title>Willard Math Circle</title>
+      <title>BHS Political Activism</title>
       <link rel="shortcut icon" type="image/x-icon" href="pheonixicon.gif">
       <!-- link to styling -->
       <link rel = "stylesheet" type = "text/css" href = "styles.css" />
