--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h1 class="hometitle">Berkeley High Political Activism</h1>
       <!-- image of math -->
       <div class="blackboard-picture">
-        <img src="https://www.freepik.com/premium-vector/political-protest-with-silhouette-protesters-hands-holding-megaphone-banners-flags_5098682.html" alt="Trulli" width="100%">
+        <img src="https://www.freepik.com/premium-vector/political-protest-with-silhouette-protesters-hands-holding-megaphone-banners-flags_5098682.htm" alt="Trulli" width="100%">
       </div>
 
       <!--all about us -->
