--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <!-- title -->
       <h1 class="hometitle">Berkeley High Political Activism</h1>
       <!-- image of math -->
-      <div class="blackboard-picture">
+      <div>
         <img src="https://www.freepik.com/premium-vector/political-protest-with-silhouette-protesters-hands-holding-megaphone-banners-flags_5098682.htm" width="100%">
       </div>
 
