--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h1 class="hometitle">Berkeley High Political Activism</h1>
       <!-- image of math -->
       <div>
-        <img src="protest.png" width="100%">
+        <img src="protest.jpg" width="100%">
       </div>
 
       <!--all about us -->
