--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
           voter engagement within our community through discussion and debate ranging from presidential candidates to climate change policy.</p>
       <p class="all_about_us_info">All students are welcome, no matter your political views or background. Feel free to join us in discussions, take part in projects
         and missions, or just stop by and say hello!</p>
+      <p class="all_about_us_info">Expecially in Berkeley, a city full of diverse political opinions and passions, it's so important to have spaces where youth feel
+        comfortable and suppoted while they're working through pressing global and local issues. </p>
 
     </body>
 </html>
